--- a/src/App.css
+++ b/src/App.css
@@ -11,11 +11,11 @@
   align-items: center;
   justify-content: center;
   font-size: calc(12px + 2vmin);
-  color: #857b72;
+  color: rgb(175, 144, 104);
 }
 
 .App-body {
-  background-color: burlywood;
+  background-color: rgb(175, 144, 104);
   min-height: 90vh;
   display: flex;
   flex-direction: column;
@@ -25,6 +25,34 @@
   color: hsl(0, 0%, 100%);
 }
 
-.App-link {
-  color: cadetblue;
+.App-button {
+  background-color: #9b7156;
+  font-size: calc(4px + 2vmin);
+  border-radius: 20px;
+  width: 8rem;
+  height: 3rem;
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  font-weight: 500;
+  color: white;
+  box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.2);
+  transition: background-color 0.2s, color 0.2s, transform 0.2s;
+}
+
+.App-button:hover {
+  background-color: hsl(23, 27%, 42%);
+  color: lightgray;
+}
+
+.App-button:active {
+  background-color: rgb(115, 87, 69);
+  color: gray;
+  transform: scale(0.90);
+}
+
+.App-button:disabled {
+  background-color: hsl(23, 16%, 28%);
+  color: gray;
+  pointer-events: none;
 }
